--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
   "name": "frontend",
   "version": "0.0.1",
-  "description": "A Quasar Project",
+  "description": "custafit online store",
   "productName": "custafit",
   "author": "darkwebplayer <amrithanadhm@gmail.com>",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+     "dev": "quasar dev",
+  "build": "quasar build",
+  "build:pwa": "quasar build -m pwa"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
-    "pinia": "^2.0.11",
     "quasar": "^2.6.0",
+    "unocss": "^0.45.12",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vuex": "^4.0.1"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.0.0",
-    "@quasar/quasar-app-extension-apollo": "^2.0.0-beta.5",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-vue": "^8.5.0",
+    "eslint-plugin-vue": "^9.0.0",
     "prettier": "^2.5.1"
   },
   "engines": {
